--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -11,7 +11,7 @@ on:
 
 env:
     NODE_VERSION: "20.x"
-    TAG: jump-game-api-${{ github.sha }}-${{ github.run_id }}-${{ github.run_attempt }}-dev
+    TAG: jcloud-api-${{ github.sha }}-${{ github.run_id }}-${{ github.run_attempt }}-dev
 
 jobs:
     build-and-deploy:
@@ -48,5 +48,5 @@ jobs:
             #       curl -X POST \
             #         -H "Content-Type: application/json" \
             #         -H "Authorization: ${{ secrets.N8N_WEBHOOK_TOKEN }}" \
-            #         -d '{"project":"dev-jump-game-api", "image":"${{ vars.REGISTRY_URL }}:${{ env.TAG }}"}' \
+            #         -d '{"project":"dev-jcloud-api", "image":"${{ vars.REGISTRY_URL }}:${{ env.TAG }}"}' \
             #         ${{ vars.DEPLOY_N8N_URL }}
