--- a/kube/dev.yaml
+++ b/kube/dev.yaml
@@ -1,152 +1,104 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: jcloud-bff
-  labels:
-    app: jcloud-bff
-spec:
-  replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 50%
-  selector:
-    matchLabels:
-      app: jcloud-bff
-  template:
-    metadata:
-      labels:
-        app: jcloud-bff
-    spec:
-      imagePullSecrets:
-        - name: docker-account
-      containers:
-        - name: jcloud-bff
-          image: registry.gitlab.com/jale29/private-images:jcloud-bff-00b71670adaded40941cd69067df48184b9bb2f7-20728915978-1-dev
-          ports:
-            - containerPort: 3334
-          resources:
-            limits:
-              memory: "400Mi"
-              cpu: "400m"
-          env:
-            - name: K8S_POD_NAME
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.name
-            - name: NODE_ENV
-              value: "production"
+  name: grafana
 ---
 apiVersion: v1
-kind: Service
+kind: PersistentVolumeClaim
 metadata:
-  name: jcloud-bff
+  name: grafana-pvc
+  namespace: grafana
 spec:
-  type: ClusterIP
-  selector:
-    app: jcloud-bff
-  ports:
-    - protocol: TCP
-      port: 3334
-      targetPort: 3334
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jcloud-api
+  name: grafana
+  namespace: grafana
   labels:
-    app: jcloud-api
+    app: grafana
 spec:
   replicas: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 50%
   selector:
     matchLabels:
-      app: jcloud-api
+      app: grafana
   template:
     metadata:
       labels:
-        app: jcloud-api
+        app: grafana
     spec:
-      imagePullSecrets:
-        - name: docker-account
+      securityContext:
+        fsGroup: 472
       containers:
-        - name: jcloud-api
-          image: registry.gitlab.com/jale29/private-images:jcloud-api-66852641cdbcc66822e832097b5d6079fbed362c-20729195071-1-dev
+        - name: grafana
+          image: grafana/grafana:latest
           ports:
-            - containerPort: 3333
+            - containerPort: 3000
+          env:
+            # Vypnutí autentizace (přenecháno na Cloudflare)
+            - name: GF_AUTH_ANONYMOUS_ENABLED
+              value: "true"
+            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
+              value: "Admin"
+            - name: GF_AUTH_DISABLE_LOGIN_FORM
+              value: "true"
+            - name: GF_AUTH_DISABLE_SIGNOUT_MENU
+              value: "true"
+            # Prevence clickjackingu (pokud bys ji chtěl mít v iframe v Cloudflare dashboardu)
+            - name: GF_SECURITY_ALLOW_EMBEDDING
+              value: "true"
           resources:
             limits:
-              memory: "400Mi"
-              cpu: "400m"
-          env:
-            - name: K8S_POD_NAME
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.name
-            - name: NODE_ENV
-              value: "production"
+              memory: "2Gi"
+              cpu: "1000m"
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+          volumeMounts:
+            - mountPath: /var/lib/grafana
+              name: grafana-storage
+      volumes:
+        - name: grafana-storage
+          persistentVolumeClaim:
+            claimName: grafana-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: jcloud-api
+  name: grafana-service
+  namespace: grafana
 spec:
-  type: ClusterIP
   selector:
-    app: jcloud-api
+    app: grafana
   ports:
     - protocol: TCP
-      port: 3333
-      targetPort: 3333
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: docker-account
-type: Opaque
-stringData:
-  GITLAB_USERNAME: docker
-  GITLAB_TOKEN: xxxx
+      port: 80
+      targetPort: 3000
+  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: jcloud-bff-ingress
+  name: grafana-ingress
+  namespace: grafana
+  annotations:
+    # Pokud používáš Cloudflare Tunnel (cloudflared) v K8s,
+    # Ingress možná ani nebudeš potřebovat, ale pro standardní setup ho zde nechávám.
+    kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: traefik
   rules:
-    - host: jcloud-bff.jale.cz
+    - host: grafana.moje-domena.cz # Zde doplň svou doménu
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: jcloud-bff
+                name: grafana-service
                 port:
-                  number: 3334
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: jcloud-api-ingress
-spec:
-  ingressClassName: traefik
-  rules:
-    - host: jcloud-api.jale.cz
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: jcloud-api
-                port:
-                  number: 3333
+                  number: 80
