--- a/packages/backend-shared/package.json
+++ b/packages/backend-shared/package.json
@@ -15,6 +15,9 @@
 		"build": "tsc --build tsconfig.build.json",
 		"clean": "rimraf dist && rimraf .cache"
 	},
+	"dependencies": {
+		"@kubernetes/client-node": "^1.4.0"
+	},
 	"devDependencies": {
 		"@types/node": "^20.11.1",
 		"rimraf": "^6.1.2",
