--- a/packages/bff/package.json
+++ b/packages/bff/package.json
@@ -15,6 +15,7 @@
 		"@fastify/cors": "^11.2.0",
 		"@fastify/static": "^9.0.0",
 		"@jcloud/backend-shared": "workspace:*",
+		"@kubernetes/client-node": "^1.4.0",
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@trpc/server": "^10.45.2",
